--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,17 +22,21 @@ add_compile_options(-Wall
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
         main.c
-            header.h
+            main.h
+            rotator.c
             rotator.h
             EEPROM.c
-            gpio_init_file.c
+            EEPROM.h
+            gpio_init.c
+            gpio_init.h
             LED.c
+            LED.h
             LoRaWAN.c
+            LoRaWAN.h
             ring_buffer.c
             ring_buffer.h
-        uart.c
-        uart.h
-        LoRaWAN.h
+            uart.c
+            uart.h
 )
 
 # Create map/bin/hex/uf2 files
@@ -41,7 +45,7 @@ pico_add_extra_outputs(${PROJECT_NAME})
 # Link to pico_stdlib (gpio, time, etc. functions)
 target_link_libraries(${PROJECT_NAME}
         pico_stdlib
-        hardware_gpio hardware_pwm
+        hardware_gpio hardware_pwm hardware_i2c
 )
 
 # Enable usb output, disable uart output
